# Kafka-document-streaming

./: .env.template  .gitignore  README.md  debug.sh  description.txt  docker-compose.yml  fix_git_history.txt  log.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
consumer/: Dockerfile  consumer.py
data/: similarity.db  test-spam-dataset.csv
database/: database.py
docker/: docker-compose.yml
flask-ui/: Dockerfile  app.py  requirements.txt
flask-ui/static/: style.css
flask-ui/templates/: dashboard.html  similar-comments.html  spammers.html
lsh/: lsh_index.py  minhash.py  preprocess.py  similarity.py
producer/: Dockerfile  main.py  producer.py  s3_writer.py
shared/: config.py  s3_config.py  s3_writer.py
tests/: conftest.py  test_database.py  test_lsh.py
